src/css/style.css
/* ... */
body, html { height: 100%; width: 100%; overflow: hidden; }
body {
	font-family: 'Source Sans Pro', "Helvetica", sans-serif;
	font-size: 100%;
	overflow: hidden;
	background-color: #B2D4E5;
	color: #071B2F;
}

/*Helper classes*/
.center { text-align: center; } .left { text-align: left; } .right { text-align: right; }

.pull-left { float: left; } .pull-right { float: right; }

.wrap { width: 100%; max-width: 1024px; margin: auto; }

.row {
	display: block;
	width: 100%;
	margin-bottom: 1em;
}
	.col {
		position: relative;
		display: inline-block;
		vertical-align: top;
		height: 100%;
		margin-right: -0.2em;
	}
		.middle .col {
			vertical-align: middle;
		}
	.col-2-1 {
		width: 50%;
	}
	.col-3-1 {
		width: 33%;
	}
	.col-4-1 {
		width: 25%;
	}
	.col-5-1 {
		width: 20.3%;
	}

/*Some defaults*/
ul { list-style: none; }
input { font-family: inherit; outline: none; }
button {
	cursor: pointer;
	border: none;
	background: none;
	color: inherit;
	font-family: inherit;
	font-size: inherit;
	outline: none;
	-webkit-user-select: none;
 	-moz-user-select: none;
 	-ms-user-select: none; user-select: none; text-shadow: inherit;
}
	button span {
		line-height: 1.4em;
		margin: 0 0.4em;
		display: inline-block;
		vertical-align: top;
	}
	button [class*=" icon-"]:before, button [class^="icon-"]:before {
		font-size: 1.4em;
		vertical-align: top;
		display: inline-block;
	}
a { color: inherit; }
::-moz-selection {
	color: white;
	background: #D7443D;
}
::selection {
	color: white;
	background: #D7443D;
}
::-webkit-input-placeholder { opacity: 1; color: inherit; }
:-moz-placeholder { opacity: 1; color: inherit; }
::-moz-placeholder { opacity: 1; color: inherit; }
:-ms-input-placeholder { opacity: 1; color: inherit; }

hr { border: none; border-top: 0.1em solid #d7443d; margin: 1em 0;}

/*Typography*/
h1, h2, h3, h4, h5, h6 {
	font-family: "Chunk Five", serif;
	font-weight: normal;
	text-shadow: inherit;
}
	h1 {
		font-size: 3em;
	}
	h2 {
		font-size: 2.4em;
	}
	h3 {
		font-size: 2em;
	}
	h4 {
		font-size: 1.6em;
	}
p {
	font-size: 1.4em;
	line-height: 1.8em;
	margin-bottom: 0.8em;
}
.small {
	font-size: 0.9em;
	line-height: 1.4em;
}

.modal {
	position: fixed;
	top: 0;
	left: -9999px;
	z-index: 100;
	width: 100%;
	height: 100%;
	background: rgba(0,0,0,0.4);
	text-shadow: none;
	opacity: 0;
	overflow: auto;
	-webkit-overflow-scrolling: touch;
	-webkit-transition: opacity 200ms linear;
	-moz-transition: opacity 200ms linear;
	-ms-transition: opacity 200ms linear;
	-o-transition: opacity 200ms linear;
	transition: opacity 200ms linear;
}
	.modal.show {
		left: 0;
		opacity: 1;
	}
	.modal-content {
		position: relative;
		z-index: 101;
		width: 100%;
		max-width: 1024px;
		padding: 1.4em;
		margin: auto;
		margin-top: 8%;
		-webkit-box-shadow: 0 3px 6px 1px rgba(0,0,0,0.4);
		box-shadow: 0 3px 6px 1px rgba(0,0,0,0.4);
		background: white;
		color: black;
	}
		.modal-content button {
			padding-top: 0;
			margin-right: 0;
		}
			.modal-content button:hover {
				color: white;
			}
		.show .modal-content {
			-webkit-animation: bounceUp 1000ms linear both;
			animation: bounceUp 1000ms linear both;
		}
		.modal-content header {
			position: relative;
			border-bottom: 0.1em solid #d7443d;
			padding-bottom: 0.5em;
			margin-bottom: 0.5em;
		}
			.modal-content .close {
				font-size: 1.4em;
				color: #d7443d;
				position: absolute;
				top: 0;
				right: 0;
				margin-right: 0;
				height: 100%;
			}
				.modal-content .close:hover {
					color: inherit;
					background: none;
				}
		.modal-body h3, .modal-body h4 {
			margin-top: 0.8em;
		}
	.modal-content footer {
		clear: both;
		min-height: 2.5em;
	}
	.background-close {
		cursor: pointer;
		position: absolute;
		top: 0;
		left: 0;
		width: 100%;
		height: 100%;
	}
.units button {
	font-size: 1.4em;
	text-align: center;
	width: 100%;
	min-height: 2.5em;
}
	.units .climacon {
		line-height: 1;
		font-size: 1.8em;
	}

body > header {
	width: 100%;
	background-color: #D7443D;
	color: white;
	text-shadow: 0 1px 2px rgba(0,0,0,0.2);
}
	body > header .top-bar {
		background-color: #D7443D;
		position: relative;
		z-index: 20;
		height: 6em;
		line-height: 6em;
		overflow: hidden;
		user-select: none;
		box-shadow: 0 2px 4px 0px rgba(0,0,0,0.2);
	}
		body.installed-app > header .top-bar {
			height: 6.5em;
		}
		body > header button {
			text-align: center;
			vertical-align: top;
			display: inline-block;
			margin-right: -.25em;
			height: 100%;
			font-size: 1.1em;
			-webkit-transition: all 200ms linear;
			-moz-transition: all 200ms linear;
			-ms-transition: all 200ms linear;
			-o-transition: all 200ms linear;
			transition: all 200ms linear;
		}
			body.installed-app .top-bar button {
				padding-top: 15px;
			}
			body > header .main-btn {
				text-overflow: ellipsis;
				overflow: hidden;
				white-space: nowrap;
				font-family: "Chunk Five", serif;
				width: 67%;
			}
				body > header .main-btn span {
					font-size: 2.4em;
				}
				.search-btn i {
					line-height: 3.4em;
					font-size: 1em;
				}
			body > header .side-btn {
				width: 16.67%;
			}
			body > header.active .search-btn, body:not(.touch) > header button:hover, body > header button.ng-click-active, body > header .selected {
				background: #B73B32;
				color: white;
			}
	.location-search {
		position: absolute;
		top: 0;
		left: 0;
		/*Space for header*/
		padding-top: 6em;
		z-index: 10;
		width: 100%;
		max-height: 100%;
		background: #B73B32;
		overflow: auto;
		-webkit-overflow-scrolling: touch;
		line-height: 1.9em;
		/*Move up and out of the way*/
		-webkit-transform: translateY(-200%);
		-moz-transform: translateY(-200%);
		-ms-transform: translateY(-200%);
		-o-transform: translateY(-200%);
		transform: translateY(-200%);
		/*Transition for when sliding up*/
		-webkit-transition: all 300ms ease-out;
		-moz-transition: all 300ms ease-out;
		-ms-transition: all 300ms ease-out;
		-o-transition: all 300ms ease-out;
		transition: all 300ms ease-out;
	}
/* ... */

